[gd_scene format=3 uid="uid://dhbpu511d1fsv"]

[ext_resource type="Texture2D" uid="uid://bit1c8ln1hcgq" path="res://assets/textures/ui/travel book/selection_frame_selected.png" id="1_7r106"]
[ext_resource type="Script" uid="uid://ogf628d6o1as" path="res://ui/travel book/quest list container/quest_preview_button.gd" id="1_cl4mn"]
[ext_resource type="Texture2D" uid="uid://db16m8fyp0bf7" path="res://assets/textures/ui/travel book/barfill2.png" id="2_cl4mn"]

[node name="QuestPreviewButton" type="Button" unique_id=203766098]
custom_minimum_size = Vector2(172, 30)
anchors_preset = -1
anchor_right = 0.14930555
anchor_bottom = 0.046296295
mouse_behavior_recursive = 1
flat = true
script = ExtResource("1_cl4mn")
metadata/_edit_use_anchors_ = true

[node name="SelectedBG" type="NinePatchRect" parent="." unique_id=1263134050]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7r106")
region_rect = Rect2(0, 0, 62, 14)
patch_margin_left = 4
patch_margin_top = 3
patch_margin_right = 4
patch_margin_bottom = 4

[node name="QuestNameLabel" type="Label" parent="." unique_id=1035945501]
texture_filter = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -9.0
offset_right = 137.5
offset_bottom = 10.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.27058825, 0.16078432, 0.16470589, 1)
theme_override_font_sizes/font_size = 14
vertical_alignment = 1

[node name="BarFill" type="NinePatchRect" parent="." unique_id=2024713180]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_cl4mn")
patch_margin_left = 1
patch_margin_right = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
